# obs-studio

cmake/finders/: FindOpenH264.cmake
frontend/wizards/: AutoConfig.cpp  AutoConfigTestPage.cpp
plugins/: CMakeLists.txt
plugins/obs-openh264/: CMakeLists.txt  obs-openh264-plugin-main.c  obs-openh264.c
